description = "${artifactId} application"

apply plugin: "war"
apply plugin: "java"
apply plugin: "jetty"

sourceCompatibility = "1.5"
targetCompatibility = "1.5"

group = "${groupId}"
version = "${version}"

repositories {
    mavenCentral()

    // All things JBoss/Hibernate
    mavenRepo name: "JBoss", url: "http://repository.jboss.org/nexus/content/groups/public/"

    // For stable versions of the tapx libraries
    mavenRepo name: "HLS", url: "http://howardlewisship.com/repository/"

    // For non-stable versions of the tapx libraries
    mavenRepo name: "HLS Snapshots", url: "http://howardlewisship.com/snapshot-repository/"

    // For access to Apache Staging (Preview) packages
    mavenRepo name: "Apache Staging", url: "https://repository.apache.org/content/groups/staging"
}

// This simulates Maven's "provided" scope, until it is officially supported by Gradle
// See http://jira.codehaus.org/browse/GRADLE-784

configurations {
    provided
}

sourceSets {
    main {
        compileClasspath += configurations.provided
    }
    test {
        compileClasspath += configurations.provided
        runtimeClasspath += configurations.provided
    }
}

dependencies {

    compile "org.apache.tapestry:tapestry-core:@tapestryReleaseVersion@"

    // Include the Log4j implementation for the SLF4J logging framework
    runtime "org.slf4j:slf4j-log4j12:@slf4jReleaseVersion@"

    // This adds automatic compression of JavaScript and CSS in production mode:
    compile "org.apache.tapestry:tapestry-yuicompressor:@tapestryReleaseVersion@"

    // Uncomment this to add support for file uploads:
    // compile "org.apache.tapestry:tapestry-upload:@tapestryReleaseVersion@"

    provided "javax.servlet:servlet-api:@servletApiReleaseVersion@"
}

test {
    useTestNG()

    options.suites("src/test/conf/testng.xml")

    systemProperties["tapestry.service-reloading-enabled"] = "false"
    systemProperties["tapestry.execution-mode"] = "development"

    maxHeapSize = "600M"

    jvmArgs("-XX:MaxPermSize=256M")

    enableAssertions = true
}

// TODO: Configure execution mode for jettyRun task
